--- a/disease-prediction-ml/notebooks/main2.ipynb
+++ b/disease-prediction-ml/notebooks/main2.ipynb
@@ -16732,7 +16732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "fa8f40dd-d7ce-47df-9043-9fbfd978996e",
    "metadata": {},
    "outputs": [
@@ -16742,7 +16742,7 @@
      "text": [
       "\n",
       "=== Example Prediction ===\n",
-      "Predicted Disease: Bronchial Asthma\n"
+      "Predicted Disease: Fungal infection\n"
      ]
     },
     {
@@ -16760,7 +16760,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 48\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m=== Example Prediction ===\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     47\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPredicted Disease:\u001b[39m\u001b[33m\"\u001b[39m, prediction[\u001b[33m\"\u001b[39m\u001b[33mpredicted_disease\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mConfidence:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprediction[\u001b[33m'\u001b[39m\u001b[33mconfidence\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2%\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     49\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mTop 3 Predictions:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     50\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m disease, prob \u001b[38;5;129;01min\u001b[39;00m prediction[\u001b[33m\"\u001b[39m\u001b[33mtop3_predictions\u001b[39m\u001b[33m\"\u001b[39m]:\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 48\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m=== Example Prediction ===\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     47\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPredicted Disease:\u001b[39m\u001b[33m\"\u001b[39m, prediction[\u001b[33m\"\u001b[39m\u001b[33mpredicted_disease\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mConfidence:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprediction[\u001b[33m'\u001b[39m\u001b[33mconfidence\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2%\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     49\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mTop 3 Predictions:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     50\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m disease, prob \u001b[38;5;129;01min\u001b[39;00m prediction[\u001b[33m\"\u001b[39m\u001b[33mtop3_predictions\u001b[39m\u001b[33m\"\u001b[39m]:\n",
       "\u001b[31mTypeError\u001b[39m: unsupported format string passed to numpy.ndarray.__format__"
      ]
     }
@@ -16804,10 +16804,10 @@
     "\n",
     "# Example usage\n",
     "example_symptoms = {\n",
-    "    'cough': 1,\n",
-    "    'breathlessness': 1,\n",
-    "    'chest_pain': 1,\n",
-    "    'high_fever': 1\n",
+    "    'itching':1,\n",
+    "    'skin_rash':1,\n",
+    "    'nodal_skin_eruptions':1,\n",
+    "    'continuous_sneezing':1\t\n",
     "}\n",
     "\n",
     "prediction = predict_disease(example_symptoms)\n",
